feat: Disable history deletion and retention features
- Removed history deletion functionality from the timeline and popup to ensure that user history is never lost.
- Removed the "Clear History" button and related confirmation modals from `timeline.html` and `popup.html`.
- Disabled the delete history item and clear user history API endpoints in `api.js` by making them no-ops.
- Removed the history retention settings from the settings modal in `timeline.html` and `popup.html`.
- Updated `timeline.js` and `popup.js` to remove event listeners and function calls related to history deletion.

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -149,10 +149,7 @@
             </div>
           </div>
 
-          <div class="setting-item">
-            <label for="retentionDays">History Retention (days)</label>
-            <input type="number" id="retentionDays" min="1" max="365" value="30">
-          </div>
+          <!-- History retention setting removed to ensure history is never deleted -->
 
           <div class="setting-item">
             <label for="showBreadcrumbsToggle">Show Navigation Breadcrumbs</label>
@@ -176,7 +173,6 @@
 
         <div class="settings-actions">
           <button id="saveSettingsButton" class="btn btn-primary">Save Settings</button>
-          <button id="clearHistoryButton" class="btn btn-danger">Clear History</button>
           <button id="logoutButton" class="btn btn-secondary">Logout</button>
         </div>
       </div>
