--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -167,7 +167,7 @@
           <h3>API Settings</h3>
           <div class="setting-item">
             <label for="apiBaseUrl">API Base URL</label>
-            <input type="text" id="apiBaseUrl" value="http://localhost:5000/api">
+            <input type="text" id="apiBaseUrl" value="https://visual-time-travel.onrender.com/api">
           </div>
         </div>
 
