feat: Implement error display and handling in timeline
- Added an error display mechanism to the timeline UI to show error messages to the user.
- Introduced an error container with a dismiss button in `timeline.html` to display error messages.
- Implemented `showError` and `hideError` functions in `timeline.js` to control the visibility and content of the error container.
- Modified `loadUserData` function in `timeline.js` to handle potential errors during loading user preferences, API base URL, domains, and history, displaying appropriate error messages.
- Added CSS styles for the error container and message in `timeline.css` to ensure a visually consistent and user-friendly error display.
- Implemented auto-hiding of error messages after 10 seconds.

--- a/extension/timeline/timeline.html
+++ b/extension/timeline/timeline.html
@@ -44,6 +44,14 @@
     </header>
 
     <main>
+      <!-- Error message container -->
+      <div id="errorContainer" class="error-container" style="display: none;">
+        <div class="error-message">
+          <p id="errorText">An error occurred</p>
+          <button id="dismissErrorButton" class="btn btn-secondary">Dismiss</button>
+        </div>
+      </div>
+
       <div class="timeline-container">
         <div id="timeline" class="timeline">
           <!-- Timeline items will be added here dynamically -->
